# realtalk

./: .realtalk.json  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
docs/design/: 1.0.md  v0.2-design.md
docs/market-research/: 2026-04-17__personality-tuning.md
docs/prd/: 0.1.md
docs/research-engineering/self-improving-agents/: 01-the-big-idea.md  02-the-four-ingredients.md  03-cookbook-build-it-in-realtalk.md  04-pitfalls-and-production-notes.md  README.md
docs/spec/: v1.0.md  v1.1.md  v1.3.md  web-embed.md
realtalk/: api.py  cli.py  compact.py  config.py  conversation.py  engine.py  game_tools.py  hooks.py  prompt.py  scenes.py  session.py  storage.py  tools.py
realtalk/tui/: __init__.py  app.py  screens.py  widgets.py
tests/: test_api_litellm.py  test_cli.py  test_compact.py  test_config.py  test_conversation.py  test_engine.py  test_scenes.py  test_session_serialization.py  test_storage.py  test_tui.py
