[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "realtalk"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "chz>=0.3,<1.0",
    "pydantic>=2.0",
    "litellm>=1.50",
    "textual>=8,<9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "mypy",
    "ruff",
]

[project.scripts]
realtalk = "realtalk.cli:entrypoint"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "realtalk"]
